--- a/css/master.css
+++ b/css/master.css
@@ -16,8 +16,6 @@ nav {
   background-position: center;
   background-repeat: no-repeat;
   background-position-y: 0px;
-  width: 100%;
-  margin-top: 54px;
   border: 1px solid transparent; }
   @media screen and (max-width: 650px) {
     .masthead {
@@ -129,7 +127,7 @@ nav {
   color: #7386D5;
   background: #fff; }
 
-#sidebar ul li.active > a, a[aria-expanded="true"] {
+#sidebar ul li.active > a {
   color: #fff;
   background: #6d7fcc; }
 
@@ -160,7 +158,7 @@ a.article, a.article:hover {
 #content.active {
   width: 100%; }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   #sidebar {
     margin-left: -250px; }
 
@@ -174,6 +172,9 @@ a.article, a.article:hover {
     width: calc(100% - 250px); }
 
   #sidebarCollapse span {
+    display: none; } }
+@media (min-width: 1000px) {
+  #mainNav {
     display: none; } }
 #portfolio .portfolio-item {
   right: 0;
