--- a/scss/master.scss
+++ b/scss/master.scss
@@ -8,7 +8,7 @@ $break-small: 500px;
 }
 
 nav {
-  background-color: black;
+  background-color: #10345e;
 }
 
 .columns {
@@ -68,7 +68,8 @@ nav {
   }
 
   button {
-    background-color: yellow;
+    background-color: #4b89ba;
+    color: white;
     height: 2em;
   }
 }
@@ -128,7 +129,7 @@ nav {
     left: 0;
     height: 100vh;
     z-index: 999;
-    background: #7386D5;
+    background: #10345e;
     color: #fff;
     transition: all 0.3s;
 }
@@ -139,7 +140,7 @@ nav {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: #0b2442;
 }
 
 #sidebar ul.components {
@@ -151,6 +152,9 @@ nav {
     color: #fff;
     padding: 10px;
 }
+#sidebar a {
+    color: #fff;
+}
 
 #sidebar ul li a {
     padding: 10px;
@@ -158,24 +162,25 @@ nav {
     display: block;
 }
 #sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
+    color: #fff;
+    background: #1e5084;
 }
 
 #sidebar ul li.active > a, {
     color: #fff;
-    background: #6d7fcc;
+    background: #1e5084;
 }
 
 
 a[data-toggle="collapse"] {
     position: relative;
+    color: white;
 }
 
 ul ul a {
   font-size: 0.9em !important;
   padding-left: 30px !important;
-  background: #6d7fcc;
+  background: #0b2442;
 }
 
 a.download {
@@ -241,7 +246,7 @@ a.article, a.article:hover {
         height: 100%;
         transition: all ease 0.5s;
         opacity: 0;
-        background: fade-out(#fed136, .1);
+        background: fade-out(rgba(15, 52, 93, 0.76), .1);
 
         &:hover {
           opacity: 1;
@@ -379,7 +384,7 @@ a.article, a.article:hover {
 
 .footer {
   width: 100%;
-  height: 5vh;
+  height: 7vh;
   padding-top: 10px;
   background: slategray;
 
